--- a/FaithConnect/Views/Admin/AdminDashboard.cshtml
+++ b/FaithConnect/Views/Admin/AdminDashboard.cshtml
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            @*<div class="row">
                 <div class="col-md-8">
                     <div class="card card-round">
                         <div class="card-header">
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-            <div class="row">
+            @*<div class="row">
                 <div class="col-md-4">
                     <div class="card card-round">
                         <div class="card-body">
@@ -259,109 +259,109 @@
                             </div>
                         </div>
                         <div class="card-body p-0">
-                            <div class="table-responsive">
+                            <div class="table-responsive">*@
                                 <!-- Projects table -->
-                                <table class="table align-items-center mb-0">
-                                    <thead class="thead-light">
-                                        <tr>
-                                            <th scope="col">Post ID</th>
-                                            <th scope="col" class="text-end">Date & Time</th>
-                                            <th scope="col" class="text-end">Status</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <th scope="row">
-                                                <button class="btn btn-icon btn-round btn-success btn-sm me-2">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                                Post from #10231
-                                            </th>
-                                            <td class="text-end">Mar 19, 2020, 2.45pm</td>
-                                            <td class="text-end">
-                                                <span class="badge badge-success">Completed</span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <button class="btn btn-icon btn-round btn-success btn-sm me-2">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                                Post from #10231
-                                            </th>
-                                            <td class="text-end">Mar 19, 2020, 2.45pm</td>
-                                            <td class="text-end">
-                                                <span class="badge badge-success">Completed</span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <button class="btn btn-icon btn-round btn-success btn-sm me-2">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                                Post from #10231
-                                            </th>
-                                            <td class="text-end">Mar 19, 2020, 2.45pm</td>
-                                            <td class="text-end">
-                                                <span class="badge badge-success">Completed</span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <button class="btn btn-icon btn-round btn-success btn-sm me-2">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                                Post from #10231
-                                            </th>
-                                            <td class="text-end">Mar 19, 2020, 2.45pm</td>
-                                            <td class="text-end">
-                                                <span class="badge badge-success">Completed</span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <button class="btn btn-icon btn-round btn-success btn-sm me-2">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                                Post from #10231
-                                            </th>
-                                            <td class="text-end">Mar 19, 2020, 2.45pm</td>
-                                            <td class="text-end">
-                                                <span class="badge badge-success">Completed</span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <button class="btn btn-icon btn-round btn-success btn-sm me-2">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                                Post from #10231
-                                            </th>
-                                            <td class="text-end">Mar 19, 2020, 2.45pm</td>
-                                            <td class="text-end">
-                                                <span class="badge badge-success">Completed</span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row">
-                                                <button class="btn btn-icon btn-round btn-success btn-sm me-2">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
-                                                Post from #10231
-                                            </th>
-                                            <td class="text-end">Mar 19, 2020, 2.45pm</td>
-                                            <td class="text-end">
-                                                <span class="badge badge-success">Completed</span>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
+                                @*<table class="table align-items-center mb-0">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Post ID</th>
+                                <th scope="col" class="text-end">Date & Time</th>
+                                <th scope="col" class="text-end">Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">
+                                    <button class="btn btn-icon btn-round btn-success btn-sm me-2">
+                                        <i class="fa fa-check"></i>
+                                    </button>
+                                    Post from #10231
+                                </th>
+                                <td class="text-end">Mar 19, 2020, 2.45pm</td>
+                                <td class="text-end">
+                                    <span class="badge badge-success">Completed</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <button class="btn btn-icon btn-round btn-success btn-sm me-2">
+                                        <i class="fa fa-check"></i>
+                                    </button>
+                                    Post from #10231
+                                </th>
+                                <td class="text-end">Mar 19, 2020, 2.45pm</td>
+                                <td class="text-end">
+                                    <span class="badge badge-success">Completed</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <button class="btn btn-icon btn-round btn-success btn-sm me-2">
+                                        <i class="fa fa-check"></i>
+                                    </button>
+                                    Post from #10231
+                                </th>
+                                <td class="text-end">Mar 19, 2020, 2.45pm</td>
+                                <td class="text-end">
+                                    <span class="badge badge-success">Completed</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <button class="btn btn-icon btn-round btn-success btn-sm me-2">
+                                        <i class="fa fa-check"></i>
+                                    </button>
+                                    Post from #10231
+                                </th>
+                                <td class="text-end">Mar 19, 2020, 2.45pm</td>
+                                <td class="text-end">
+                                    <span class="badge badge-success">Completed</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <button class="btn btn-icon btn-round btn-success btn-sm me-2">
+                                        <i class="fa fa-check"></i>
+                                    </button>
+                                    Post from #10231
+                                </th>
+                                <td class="text-end">Mar 19, 2020, 2.45pm</td>
+                                <td class="text-end">
+                                    <span class="badge badge-success">Completed</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <button class="btn btn-icon btn-round btn-success btn-sm me-2">
+                                        <i class="fa fa-check"></i>
+                                    </button>
+                                    Post from #10231
+                                </th>
+                                <td class="text-end">Mar 19, 2020, 2.45pm</td>
+                                <td class="text-end">
+                                    <span class="badge badge-success">Completed</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <button class="btn btn-icon btn-round btn-success btn-sm me-2">
+                                        <i class="fa fa-check"></i>
+                                    </button>
+                                    Post from #10231
+                                </th>
+                                <td class="text-end">Mar 19, 2020, 2.45pm</td>
+                                <td class="text-end">
+                                    <span class="badge badge-success">Completed</span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
+            </div>
+        </div>
+    </div>*@
             </div>
         </div>
     </div>
     
-</div>
+
