--- a/FaithConnect/Views/Home/Index.cshtml
+++ b/FaithConnect/Views/Home/Index.cshtml
@@ -136,41 +136,38 @@
                 <div class="event-buttons">
                     <button id="upcomingEventsBtn" class="event-button active">Upcoming Events</button>
                 </div>
-                <div id="upcomingEvents">
-                    <div class="event-item mb-3 p-3 bg-light rounded d-flex" data-date="2024-07-12">
-                        <div class="event-date me-3 text-center">
-                            <div class="event-day mb-1">12</div>
-                            <div class="event-time">00:00 PM</div>
+                <div id="upcomingEvent">
+                    @foreach (var events in Model.Events.Where(g => g.userId == currentUserId && g.status == 1 && g.Event.event_date > DateTime.Now).OrderByDescending(g => g.Event.event_date))
+                    {
+                        <div class="event-item mb-3 p-3 bg-light rounded d-flex" data-date="2024-07-12">
+                            <div class="event-date me-3 text-center">
+                                <div class="event-day mb-1" style="color:black;">
+                                    @events.Event.event_date.Value.ToString("MMM")
+                                </div>
+                                <div class="event-day mb-1">
+                                    @(events.Event.event_date.HasValue ? events.Event.event_date.Value.ToString("dd") : "N/A")
+                                </div>
+                                <div class="event-time">@(events.Event.event_date.HasValue ? events.Event.event_date.Value.ToString("hh:mm tt") : "N/A")</div>
+
+                            </div>
+                            <div class="event-details">
+                                <div class="event-day-of-week mb-1">@events.Event.event_date.Value.ToString("dddd")</div>
+                                <button class="action-button event-title mb-1"
+                                        data-toggle="modal"
+                                        data-target="#viewEventModal"
+                                        data-title="@events.Event.title"
+                                        data-eventId="@events.Event.id"
+                                        data-groupId="@events.Event.groupId"
+                                        data-description="@events.Event.description"
+                                        data-date="@events.Event.event_date.Value.ToString("MMMM d, yyyy hh:mm tt")">
+                                    @events.Event.title
+                                </button>
+                                <div class="event-description">@events.Event.description</div>
+                            </div>
                         </div>
-                        <div class="event-details">
-                            <div class="event-day-of-week mb-1">Thursday</div>
-                            <div class="event-title mb-1">Prayer Meeting</div>
-                            <div class="event-description">Prayer Meeting with Jesus</div>
-                        </div>
-                    </div>
-                    <div class="event-item mb-3 p-3 bg-light rounded d-flex" data-date="2024-07-13">
-                        <div class="event-date me-3 text-center">
-                            <div class="event-day mb-1">13</div>
-                            <div class="event-time">00:00 PM</div>
-                        </div>
-                        <div class="event-details">
-                            <div class="event-day-of-week mb-1">Tuesday</div>
-                            <div class="event-title mb-1">Prayer Meeting</div>
-                            <div class="event-description">Prayer Meeting with Jesus</div>
-                        </div>
-                    </div>
-                    <div class="event-item mb-3 p-3 bg-light rounded d-flex" data-date="2024-07-27">
-                        <div class="event-date me-3 text-center">
-                            <div class="event-day mb-1">27</div>
-                            <div class="event-time">00:00 PM</div>
-                        </div>
-                        <div class="event-details">
-                            <div class="event-day-of-week mb-1">Friday</div>
-                            <div class="event-title mb-1">Prayer Meeting</div>
-                            <div class="event-description">Prayer Meeting with Jesus</div>
-                        </div>
-                    </div>
+                    }
                 </div>
+
                 <div id="recentEvents" class="d-none">
                     <!-- Recent events will be populated similarly to upcoming events -->
                 </div>
